--- a/index.html
+++ b/index.html
@@ -13,5 +13,30 @@
     />
     <title>Welcome to Advision</title>
   </head>
-  <body></body>
+  <body>
+    <div class="navigation navigation--top" id="navigation">
+      <div class="navigation__logo"></div>
+      <nav class="navigation__nav">
+        <ul class="navigation__list">
+          <li class="navigation__item">
+            <a href="#home" class="navigation__link navigation__link--current"
+              >Home</a
+            >
+          </li>
+          <li class="navigation__item">
+            <a href="#about" class="navigation__link">About</a>
+          </li>
+          <li class="navigation__item">
+            <a href="#cases" class="navigation__link">Work</a>
+          </li>
+          <li class="navigation__item">
+            <a href="#blog" class="navigation__link">Blog</a>
+          </li>
+          <li class="navigation__item">
+            <a href="#contact" class="navigation__link">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </body>
 </html>
