Adding the about section

--- a/index.html
+++ b/index.html
@@ -38,5 +38,76 @@
         </ul>
       </nav>
     </div>
+
+    <header class="header">
+      <div class="bg-video">
+        <video class="bg-video__content" autoplay loop muted>
+          <source src="images/video.mp4" type="video/mp4" />
+        </video>
+      </div>
+      <div class="header__text-box">
+        <h1 class="heading-primary">
+          <span class="heading-primary--main">The spirit of expertise</span>
+          <span class="heading-primary--sub"
+            >We create world class business solutions</span
+          >
+        </h1>
+        <a href="#about" class="btn btn--main btn--light"
+          ><span class="btn__span btn__span--light">Read More</span></a
+        >
+      </div>
+    </header>
+
+    <main>
+      <!-- About: Icons -->
+      <section id="about" class="section-about">
+        <div class="flex-items">
+          <div class="about-box">
+            <div class="about-box__icon">
+              <img
+                class="about-box__icon--1"
+                src="images/icons/shopping-cart.png"
+                alt="icon 1"
+              />
+            </div>
+            <h3 class="about-box__heading mt-3 mb-3">Consumer Products</h3>
+            <p class="about-box__text">
+              We identify solutions for consumer product companies and
+              effectively strengthen their position in the marketplace.
+            </p>
+          </div>
+
+          <div class="about-box">
+            <div class="about-box__icon">
+              <img
+                class="about-box__icon--2"
+                src="images/icons/ecommerce.png"
+                alt="icon 2"
+              />
+            </div>
+            <h3 class="about-box__heading mt-3 mb-3">Telecom & Media</h3>
+            <p class="about-box__text">
+              Our focus is on dramatically increasing enterprise value through
+              cost and revenue model adjustments.
+            </p>
+          </div>
+
+          <div class="about-box">
+            <div class="about-box__icon">
+              <img
+                class="about-box__icon--3"
+                src="images/icons/unboxing.png"
+                alt="icon 3"
+              />
+            </div>
+            <h3 class="about-box__heading mt-3 mb-3">Real Estate</h3>
+            <p class="about-box__text">
+              Our team of infrastructure and real estate consultants can help
+              you find opportunities for constant growth and change.
+            </p>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
