Creating the card component

--- a/index.html
+++ b/index.html
@@ -108,6 +108,67 @@
           </div>
         </div>
       </section>
+
+      <!-- Card (Solutions) -->
+      <section class="card">
+        <div class="card__row">
+          <div class="card__col">
+            <div class="card__col--1">
+              <img
+                class="card__img"
+                src="images/home/team-main.jpg"
+                alt="people"
+              />
+            </div>
+          </div>
+          <div class="card__col">
+            <div class="card__col--2 bg-secondary">
+              <h4 class="heading-tertiary mb-2">| About our work</h4>
+              <h2 class="heading-secondary">We create bespoke solutions</h2>
+              <p class="paragraph">
+                The Advision team is motivated by solving your toughest
+                challenges with tactical, creative, and modern solutions that
+                generate significant results for your company. We deliver
+                services to small- and medium-sized enterprises and the public
+                sector.
+              </p>
+              <a href="#contact" class="btn btn--main btn--light"
+                ><span class="btn__span btn__span--light">Learn More</span></a
+              >
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Card (Blog) -->
+      <section id="blog" class="card">
+        <div class="card__row card__row--reversed">
+          <div class="card__col">
+            <div class="card__col--1">
+              <img class="card__img" src="images/blog/blog1.jpg" alt="blog" />
+            </div>
+          </div>
+          <div class="card__col">
+            <div class="card__col--2 bg-secondary">
+              <h4 class="heading-tertiary mb-2">| December 15, 2020</h4>
+              <h2 class="heading-secondary">
+                COVID-19 vs. Facing Digital Transformation
+              </h2>
+              <p class="paragraph">
+                Much has changed in the past seven months. As businesses grapple
+                with the acute disruption brought on by COVID-19, the lessons of
+                chronic disruption like digital transformation are proving
+                useful.
+              </p>
+              <a href="#contact" class="btn btn--main btn--light"
+                ><span class="btn__span btn__span--light"
+                  >Read Our Blog</span
+                ></a
+              >
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
