Creating the cases section

--- a/index.html
+++ b/index.html
@@ -140,6 +140,124 @@
         </div>
       </section>
 
+      <!-- Cases -->
+      <section id="cases" class="cases section-cases flex-grid section-padding">
+        <header class="section-header">
+          <h4 class="heading-tertiary mb-2">| What we do</h4>
+          <h2 class="heading-secondary">Our daily work</h2>
+          <p class="paragraph mb-6">
+            We are a uniquely collaborative team full of passionate people who
+            care more about your success.
+          </p>
+        </header>
+        <div class="cases__row">
+          <div class="cases__col">
+            <a
+              href="images/cases/cases1.jpg"
+              data-lightbox="cases"
+              data-title="Oslo office"
+            >
+              <img
+                class="cases__img"
+                src="images/cases/cases1.jpg"
+                alt="case"
+              />
+            </a>
+          </div>
+          <div class="cases__col">
+            <a
+              href="images/cases/cases2.jpg"
+              data-lightbox="cases"
+              data-title="Case team work"
+            >
+              <img
+                class="cases__img"
+                src="images/cases/cases2.jpg"
+                alt="case"
+              />
+            </a>
+          </div>
+          <div class="cases__col">
+            <a
+              href="images/cases/cases3.jpg"
+              data-lightbox="cases"
+              data-title="Oslo office"
+            >
+              <img
+                class="cases__img"
+                src="images/cases/cases3.jpg"
+                alt="case"
+              />
+            </a>
+          </div>
+          <div class="cases__col">
+            <a
+              href="images/cases/cases4.jpg"
+              data-lightbox="cases"
+              data-title="John Barkley from London office."
+            >
+              <img
+                class="cases__img"
+                src="images/cases/cases4.jpg"
+                alt="case"
+              />
+            </a>
+          </div>
+          <div class="cases__col">
+            <a
+              href="images/cases/cases5.jpg"
+              data-lightbox="cases"
+              data-title="London office"
+            >
+              <img
+                class="cases__img"
+                src="images/cases/cases5.jpg"
+                alt="case"
+              />
+            </a>
+          </div>
+          <div class="cases__col">
+            <a
+              href="images/cases/cases6.jpg"
+              data-lightbox="cases"
+              data-title="Jane Coley and Martha Bright working on a client case."
+            >
+              <img
+                class="cases__img"
+                src="images/cases/cases6.jpg"
+                alt="case"
+              />
+            </a>
+          </div>
+          <div class="cases__col">
+            <a
+              href="images/cases/cases7.jpg"
+              data-lightbox="cases"
+              data-title="Tableau dashboard prepared for the client meeting."
+            >
+              <img
+                class="cases__img"
+                src="images/cases/cases7.jpg"
+                alt="case"
+              />
+            </a>
+          </div>
+          <div class="cases__col">
+            <a
+              href="images/cases/cases8.jpg"
+              data-lightbox="cases"
+              data-title="Client meeting in the Oslo office."
+            >
+              <img
+                class="cases__img"
+                src="images/cases/cases8.jpg"
+                alt="case"
+              />
+            </a>
+          </div>
+        </div>
+      </section>
+
       <!-- Card (Blog) -->
       <section id="blog" class="card">
         <div class="card__row card__row--reversed">
