--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/lightbox.min.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
@@ -141,15 +142,13 @@
       </section>
 
       <!-- Cases -->
-      <section id="cases" class="cases section-cases flex-grid section-padding">
-        <header class="section-header">
-          <h4 class="heading-tertiary mb-2">| What we do</h4>
-          <h2 class="heading-secondary">Our daily work</h2>
-          <p class="paragraph mb-6">
-            We are a uniquely collaborative team full of passionate people who
-            care more about your success.
-          </p>
-        </header>
+      <section id="cases" class="cases section-cases">
+        <h4 class="heading-tertiary mb-2">| What we do</h4>
+        <h2 class="heading-secondary">Our daily work</h2>
+        <p class="paragraph mb-6">
+          We are a uniquely collaborative team full of passionate people who
+          care more about your success.
+        </p>
         <div class="cases__row">
           <div class="cases__col">
             <a
@@ -288,5 +287,13 @@
         </div>
       </section>
     </main>
+
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+      crossorigin="anonymous"
+    ></script>
+    <script src="js/lightbox.min.js"></script>
+    <script src="js/lightbox.min.js"></script>
   </body>
 </html>
