Formatting the mgmt section

--- a/index.html
+++ b/index.html
@@ -286,6 +286,50 @@
           </div>
         </div>
       </section>
+
+      <!-- Mgmt -->
+      <section id="mgmt" class="section-mgmt">
+        <h4 class="heading-tertiary mb-2">| Who we are</h4>
+        <h2 class="heading-secondary">Comany's Management</h2>
+        <p class="paragraph mb-6">
+          Our leaders are passionate, collaborative people who care for you and
+          your success.
+        </p>
+        <div class="mgmt">
+          <div class="mgmt__container">
+            <img
+              class="mgmt__img"
+              src="images/team/person1.jpg"
+              alt="management"
+            />
+            <h5 class="mgmt__person mt-3 mb-2">Robert Williams</h5>
+            <div class="mgmt__divider"></div>
+            <p class="mgmt__position mt-2 mb-2">CEO</p>
+          </div>
+
+          <div class="mgmt__container">
+            <img
+              class="mgmt__img"
+              src="images/team/person2.jpg"
+              alt="management"
+            />
+            <h5 class="mgmt__person mt-3 mb-2">Jane Smith</h5>
+            <div class="mgmt__divider"></div>
+            <p class="mgmt__position mt-2 mb-2">Vice CEO</p>
+          </div>
+
+          <div class="mgmt__container">
+            <img
+              class="mgmt__img"
+              src="images/team/person3.jpg"
+              alt="management"
+            />
+            <h5 class="mgmt__person mt-3 mb-2">Bob Johnson</h5>
+            <div class="mgmt__divider"></div>
+            <p class="mgmt__position mt-2 mb-2">Marketing Head</p>
+          </div>
+        </div>
+      </section>
     </main>
 
     <script
