--- a/index.html
+++ b/index.html
@@ -332,6 +332,22 @@
       </section>
     </main>
 
+    <!-- Footer -->
+    <footer class="footer">
+      <div class="footer__social">
+        <a class="footer__icon" href="#"
+          ><i class="fab fa-facebook fa-2x"></i
+        ></a>
+        <a class="footer__icon" href="#"
+          ><i class="fab fa-twitter fa-2x"></i
+        ></a>
+        <a class="footer__icon" href="#"
+          ><i class="fab fa-linkedin fa-2x"></i
+        ></a>
+      </div>
+      <p class="footer__text">Copyright &copy; 2021 &nbsp;|&nbsp; Advision</p>
+    </footer>
+
     <script
       src="https://code.jquery.com/jquery-3.5.1.min.js"
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
