--- a/index.html
+++ b/index.html
@@ -421,6 +421,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="js/lightbox.min.js"></script>
-    <script src="js/lightbox.min.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
