--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
       integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
+    />
     <title>Welcome to Advision</title>
   </head>
   <body>
@@ -277,7 +281,7 @@
                 chronic disruption like digital transformation are proving
                 useful.
               </p>
-              <a href="#contact" class="btn btn--main btn--light"
+              <a href="blog.html" class="btn btn--main btn--light"
                 ><span class="btn__span btn__span--light"
                   >Read Our Blog</span
                 ></a
