Formatting the post1 page

--- a/blog.html
+++ b/blog.html
@@ -55,6 +55,142 @@
       </div>
     </header>
 
+    <!-- Card (Solutions) -->
+    <main>
+      <div class="container">
+        <section class="card">
+          <div class="card__row">
+            <div class="card__col">
+              <div class="card__col--1">
+                <img
+                  class="card__img"
+                  src="images/blog/blog1.jpg"
+                  alt="people"
+                />
+              </div>
+            </div>
+            <div class="card__col">
+              <div class="card__col--2 bg--light">
+                <h2 class="heading-secondary">
+                  COVID-19 vs. Facing Digital Transformation
+                </h2>
+
+                <p class="card__author card__author--light mt-5 mb-3">
+                  <i class="card__icon card__icon--light bi bi-person"></i>
+                  &nbsp;&nbsp;Posted by
+                  <strong>Gerald C. Kane</strong>
+                </p>
+                <p class="card__date card__date--light mb-1">
+                  <i
+                    class="card__icon card__icon--light bi bi-calendar2-check"
+                  ></i>
+                  &nbsp;&nbsp;February 17, 2021
+                </p>
+
+                <p class="paragraph">
+                  Much has changed in the past seven months. As businesses
+                  grapple with the acute disruption brought on by COVID-19, the
+                  lessons of chronic disruption like digital transformation are
+                  proving useful.
+                </p>
+                <a href="post1.html" class="btn btn--main btn--dark"
+                  ><span class="btn__span btn__span--dark">Read More</span></a
+                >
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <div class="py-4"></div>
+
+        <section class="card">
+          <div class="card__row card__row--reversed">
+            <div class="card__col">
+              <div class="card__col--1">
+                <img
+                  class="card__img"
+                  src="images/blog/blog2.jpg"
+                  alt="people"
+                />
+              </div>
+            </div>
+            <div class="card__col">
+              <div class="card__col--2 bg--dark">
+                <h2 class="heading-secondary">
+                  The Next Chapter<br />of Data Privacy
+                </h2>
+
+                <p class="card__author card__author--dark mt-5 mb-3">
+                  <i class="card__icon card__icon--dark bi bi-person"></i>
+                  &nbsp;&nbsp;Posted by
+                  <strong>Rodney R. Sides</strong>
+                </p>
+                <p class="card__date card__date--dark mb-1">
+                  <i
+                    class="card__icon card__icon--dark bi bi-calendar2-check"
+                  ></i>
+                  &nbsp;&nbsp;January 25, 2021
+                </p>
+
+                <p class="paragraph">
+                  Strong data privacy policies can be the first step to enabling
+                  consumer trust and loyalty in the new economic environment.
+                </p>
+                <a href="post2.html" class="btn btn--main btn--light"
+                  ><span class="btn__span btn__span--light">Read More</span></a
+                >
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <div class="py-4"></div>
+
+        <section class="card">
+          <div class="card__row">
+            <div class="card__col">
+              <div class="card__col--1">
+                <img
+                  class="card__img"
+                  src="images/blog/blog3.jpg"
+                  alt="people"
+                />
+              </div>
+            </div>
+            <div class="card__col">
+              <div class="card__col--2 bg--light">
+                <h2 class="heading-secondary">
+                  2021 banking and capital markets outlook
+                </h2>
+
+                <p class="card__author card__author--light mt-5 mb-3">
+                  <i class="card__icon card__icon--light bi bi-person"></i>
+                  &nbsp;&nbsp;Posted by
+                  <strong>Mark Shilling</strong>
+                </p>
+                <p class="card__date card__date--light mb-1">
+                  <i
+                    class="card__icon card__icon--light bi bi-calendar2-check"
+                  ></i>
+                  &nbsp;&nbsp;January 18, 2021
+                </p>
+
+                <p class="paragraph">
+                  In our 2021 banking and capital markets outlook, 200 industry
+                  leaders weighed in on their companies’ COVID-19 recovery
+                  efforts. How can the emerging lessons serve as a catalyst for
+                  business transformation?
+                </p>
+                <a href="post3.html" class="btn btn--main btn--dark"
+                  ><span class="btn__span btn__span--dark">Read More</span></a
+                >
+              </div>
+            </div>
+          </div>
+        </section>
+      </div>
+    </main>
+
     <!-- Footer -->
     <footer class="footer">
       <div class="footer__social">
