Applying media queries onto the header

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <h3 class="about-box__heading mt-3 mb-3">Telecom & Media</h3>
             <p class="about-box__text">
               Our focus is on dramatically increasing enterprise value through
-              cost and revenue model adjustments.
+              thoughtful cost and revenue model adjustments.
             </p>
           </div>
 
