Applying media queries onto the reusable components

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
       <section id="cases" class="cases section-cases">
         <h4 class="heading-tertiary mb-2">| What we do</h4>
         <h2 class="heading-secondary">Our daily work</h2>
-        <p class="paragraph mb-6">
+        <p class="paragraph paragraph--center mb-6">
           We are a uniquely collaborative team full of passionate people who
           care more about your success.
         </p>
@@ -295,7 +295,7 @@
       <section id="mgmt" class="section-mgmt">
         <h4 class="heading-tertiary mb-2">| Who we are</h4>
         <h2 class="heading-secondary">Comany's Management</h2>
-        <p class="paragraph mb-6">
+        <p class="paragraph paragraph--center mb-6">
           Our leaders are passionate, collaborative people who care for you and
           your success.
         </p>
