Adding media queries

--- a/blog.html
+++ b/blog.html
@@ -55,18 +55,14 @@
       </div>
     </header>
 
-    <!-- Card (Solutions) -->
+    <!-- Card (Blog) -->
     <main>
       <div class="container">
         <section class="card">
           <div class="card__row">
-            <div class="card__col">
+            <div class="card__col card__col--blog">
               <div class="card__col--1">
-                <img
-                  class="card__img"
-                  src="images/blog/blog1.jpg"
-                  alt="people"
-                />
+                <img class="card__img" src="images/blog/blog1.jpg" alt="blog" />
               </div>
             </div>
             <div class="card__col">
@@ -105,19 +101,15 @@
 
         <section class="card">
           <div class="card__row card__row--reversed">
-            <div class="card__col">
+            <div class="card__col card__col--blog">
               <div class="card__col--1">
-                <img
-                  class="card__img"
-                  src="images/blog/blog2.jpg"
-                  alt="people"
-                />
+                <img class="card__img" src="images/blog/blog2.jpg" alt="blog" />
               </div>
             </div>
             <div class="card__col">
               <div class="card__col--2 bg--dark">
                 <h2 class="heading-secondary">
-                  The Next Chapter<br />of Data Privacy
+                  The Next Chapter of Data Privacy
                 </h2>
 
                 <p class="card__author card__author--dark mt-5 mb-3">
@@ -133,8 +125,9 @@
                 </p>
 
                 <p class="paragraph">
-                  Strong data privacy policies can be the first step to enabling
-                  consumer trust and loyalty in the new economic environment.
+                  It is proven that strong data privacy policies can be the
+                  first step to enabling consumer trust and loyalty in the new
+                  economic environment.
                 </p>
                 <a href="post2.html" class="btn btn--main btn--light"
                   ><span class="btn__span btn__span--light">Read More</span></a
@@ -148,13 +141,9 @@
 
         <section class="card">
           <div class="card__row">
-            <div class="card__col">
+            <div class="card__col card__col--blog">
               <div class="card__col--1">
-                <img
-                  class="card__img"
-                  src="images/blog/blog3.jpg"
-                  alt="people"
-                />
+                <img class="card__img" src="images/blog/blog3.jpg" alt="blog" />
               </div>
             </div>
             <div class="card__col">
