--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
               <img
                 class="card__img"
                 src="images/home/team-main.jpg"
-                alt="people"
+                alt="solutions"
               />
             </div>
           </div>
@@ -343,7 +343,7 @@
               <img
                 class="card__img"
                 src="images/home/contact.jpg"
-                alt="people"
+                alt="contact"
               />
             </div>
           </div>
