--- a/post2.html
+++ b/post2.html
@@ -80,7 +80,7 @@
           <article class="post__article">
           <p class="post__lead">
             <strong>
-              Strong data privacy policies can be the first step to enabling consumer trust and loyalty in the new economic environment.
+              It is proven that strong data privacy policies can be the first step to enabling consumer trust and loyalty in the new economic environment.
             </strong>
           </p>
           <div class="py-2"></div>
