--- a/blog.html
+++ b/blog.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/lightbox.min.css" />
     <link
@@ -58,7 +59,7 @@
     <!-- Card (Blog) -->
     <main>
       <div class="container">
-        <section class="card">
+        <section class="card card--animated">
           <div class="card__row">
             <div class="card__col card__col--blog">
               <div class="card__col--1">
