--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
     />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <title>Welcome to Advision</title>
   </head>
   <body>
@@ -51,7 +52,12 @@
           <source src="images/video.mp4" type="video/mp4" />
         </video>
       </div>
-      <div class="header__text-box">
+      <div
+        class="header__text-box"
+        data-aos="fade-down"
+        data-aos-easing="linear"
+        data-aos-duration="1100"
+      >
         <h1 class="heading-primary">
           <span class="heading-primary--main">The spirit of expertise</span>
           <span class="heading-primary--sub"
@@ -116,7 +122,7 @@
       </section>
 
       <!-- Card (Solutions) -->
-      <section class="card">
+      <section class="card" data-aos="fade">
         <div class="card__row">
           <div class="card__col">
             <div class="card__col--1">
@@ -263,7 +269,7 @@
       </section>
 
       <!-- Card (Blog) -->
-      <section id="blog" class="card">
+      <section id="blog" class="card" data-aos="fade">
         <div class="card__row card__row--reversed">
           <div class="card__col">
             <div class="card__col--1">
@@ -426,6 +432,16 @@
       crossorigin="anonymous"
     ></script>
     <script src="js/lightbox.min.js"></script>
+
     <script src="js/script.js"></script>
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+    <script>
+      AOS.init({
+        duration: 1500,
+        once: true,
+      });
+    </script>
   </body>
 </html>
